# flask-parental-control

./: Dockerfile  README.md  app.py  docker-compose.yml  factory.py  generator.py  pyproject.toml  test.py  test_flask-parental-control.py  utils.py
.github/workflows/: build.yml  flask-parental-control.yml
.reuse/: dep5
src/: factory.py  generator.py  utils.py
